# app-sticky-memo

./: .gitignore  .pre-commit-config.yaml  LICENSE  Readme.md  app.py  app_sticky_memo.spec  build.bat  pyproject.toml
.github/: copilot-instructions.md
docs/: Readme.ja.md
src/: __init__.py
src/components/: app_display.py  header.py  memo_editor.py  settings_panel.py
src/core/: __init__.py  foreground_monitor.py  memo_manager.py  settings_manager.py
src/locales/: en.yaml  i18n.py  ja.yaml
