[project]
name = "app-sticky-memo"
version = "0.1.0"
description = "A Windows-exclusive application that allows you to save notes for each application"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Satoshi Sashida"}
]
requires-python = ">=3.11"
dependencies = [
    "flet[all]>=0.28.3",
    "psutil>=7.0.0",
    "pywin32>=310",
    "pyyaml>=6.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded by a single or double slash is treated as a comment
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app_sticky_memo"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
]

[project.scripts]
format-code = "black"
sort-imports = "isort"
lint-code = "ruff"
